[package]
name = "subnet-calculator"
version = "0.1.0"
authors = ["Showen Otto <showenotto@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
ipnet = "2.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
web-sys = { version = "0.3.83", features = [
  "Window",
  "Document",
  "HtmlDocument",
  "HtmlElement",
  "Element",
  "DomTokenList",
  "Storage",
] }


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
